scattered editing and fixing sidenotes on mobile

--- a/_sass/_sidenote.scss
+++ b/_sass/_sidenote.scss
@@ -1,10 +1,18 @@
 .sidenote {
   position: absolute;
   text-align: left;
-  padding-left: 20px;
-  margin-left: 20px;
-  margin-bottom: 1.5em;
-  border-left: 1px solid var(--text-color);
+
+  padding: {
+    left: 1em;
+    right: 1em;
+  }
+  margin: {
+    left: 20px;
+    bottom: 1.5em;
+    right: 1em;
+  }
+
+  border-left: 1px solid var(--link-color);
   color: var(--text-color);
   font-style: italic;
   font-size: 0.8em;
@@ -32,8 +40,13 @@
     display: inline;
   }
 
-  blockquote p {
-    display: block;
+  blockquote {
+    padding: 0 0 0 0.5rem;
+    border-left: 0.1rem solid var(--text-color);
+
+    p {
+      display: block;
+    }
   }
 
   /* kramdown */
